Add Intake Page
* Add ability to re-send email if it failed originally
* Delete ALCS Noti Submission Service, use Portals instead

--- a/alcs-frontend/src/app/shared/inline-editors/inline-dropdown/inline-dropdown.component.html
+++ b/alcs-frontend/src/app/shared/inline-editors/inline-dropdown/inline-dropdown.component.html
@@ -3,7 +3,7 @@
     <a (click)="startEdit()" class="add" *ngIf="!value"> Select an option </a>
     <a (click)="startEdit()" class="add" *ngIf="multiple && coerceArray(value)?.length === 0"> Select option(s) </a>
     <span *ngIf="!multiple">
-      {{ value }}
+      {{ displayValue }}
     </span>
     <span *ngIf="multiple">
       {{ coerceArray(value)?.join(', ') }}
