--- a/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.html
+++ b/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.html
@@ -110,7 +110,9 @@
     <ng-container *ngIf="currentStep === steps.srwType">
       <div class="step-description">
         Submitting a notification of Statutory Right of Way (SRW) only applies to a SRW described in
-        <a href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96250_00_multi#section218"
+        <a
+          target="_blank"
+          href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96250_00_multi#section218"
           >s. 218 of the Land Title Act.</a
         >
       </div>
