--- a/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferees.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferees.component.html
@@ -15,7 +15,7 @@
         }"
         (click)="onAdd()"
       >
-        Add Transferee
+        Add New Transferee
       </button>
       <app-validation-error *ngIf="transferees.length === 0 && showErrors">
         At least one transferee is required
