--- a/portal-frontend/src/app/features/notifications/notification-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/parcel/parcel.component.html
@@ -25,7 +25,7 @@
       {{ parcel.legalDescription }}
       <app-no-data [showRequired]="showErrors" *ngIf="!parcel.legalDescription"></app-no-data>
     </div>
-    <div class="subheading2 grid-1">Area (Hectares)</div>
+    <div class="subheading2 grid-1">Approx. Map Area (Hectares)</div>
     <div class="grid-double">
       {{ parcel.mapAreaHectares }}
       <app-no-data [showRequired]="showErrors" *ngIf="!parcel.mapAreaHectares"></app-no-data>
