--- a/portal-frontend/src/app/shared/no-data/no-data.component.html
+++ b/portal-frontend/src/app/shared/no-data/no-data.component.html
@@ -1,7 +1,7 @@
 <div class="no-data">
-  <div class="text">No Data</div>
+  <div class="text">{{ text }}</div>
   <div class="subtext error" *ngIf="showRequired">
     <mat-icon>warning</mat-icon>
-    Required Field
+    {{ errorText }}
   </div>
 </div>
