--- a/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferee-dialog/transferee-dialog.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferee-dialog/transferee-dialog.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-title>
-  <h2 *ngIf="!isEdit">Add New Transferee</h2>
-  <h2 *ngIf="isEdit">Edit Transferee</h2>
+  <h3 *ngIf="!isEdit">Add New Transferee</h3>
+  <h3 *ngIf="isEdit">Edit Transferee</h3>
 </div>
 <div mat-dialog-content>
   <form [formGroup]="form">
@@ -8,8 +8,8 @@
       <div class="full-row">
         <label for="type">Transferee Type</label>
         <mat-button-toggle-group (change)="onChangeType($event)" class="input" id="type" formControlName="type">
-          <mat-button-toggle [value]="OWNER_TYPE.INDIVIDUAL">Individual</mat-button-toggle>
-          <mat-button-toggle [value]="OWNER_TYPE.ORGANIZATION">Organization</mat-button-toggle>
+          <mat-button-toggle color="primary" [value]="OWNER_TYPE.INDIVIDUAL">Individual</mat-button-toggle>
+          <mat-button-toggle color="primary" [value]="OWNER_TYPE.ORGANIZATION">Organization</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
       <div class="full-row" *ngIf="type.getRawValue() === OWNER_TYPE.ORGANIZATION">
@@ -25,7 +25,7 @@
           <div *ngIf="organizationName.errors?.['required']">This field is required</div>
         </div>
       </div>
-      <h4 class="full-row" *ngIf="type.getRawValue() === OWNER_TYPE.ORGANIZATION">Organization Contact Info</h4>
+      <h5 class="full-row" *ngIf="type.getRawValue() === OWNER_TYPE.ORGANIZATION">Organization Contact Info</h5>
       <div>
         <label for="firstName">First Name</label>
         <mat-form-field appearance="outline">
@@ -78,7 +78,11 @@
   </form>
 </div>
 <div mat-dialog-actions class="actions">
-  <button mat-stroked-button (click)="onClose()">Cancel</button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid" *ngIf="!isEdit" (click)="onCreate()">Add</button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid" *ngIf="isEdit" (click)="onSave()">Save</button>
+  <button mat-stroked-button color="primary" (click)="onClose()">Cancel</button>
+  <button mat-flat-button color="primary" [disabled]="form.invalid || isLoading" *ngIf="!isEdit" (click)="onCreate()">
+    Add
+  </button>
+  <button mat-flat-button color="primary" [disabled]="form.invalid || isLoading" *ngIf="isEdit" (click)="onSave()">
+    Save
+  </button>
 </div>
