--- a/portal-frontend/src/app/features/notifications/view-submission/alc-review/submission-documents/submission-documents.component.html
+++ b/portal-frontend/src/app/features/notifications/view-submission/alc-review/submission-documents/submission-documents.component.html
@@ -28,7 +28,7 @@
     <ng-container matColumnDef='actions'>
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef='let element'>
-        <button mat-icon-button (click)='openFile(element.uuid)'>
+        <button mat-icon-button (click)='downloadFile(element.uuid)'>
           <mat-icon>file_download</mat-icon>
         </button>
       </td>
