--- a/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferees.component.scss
+++ b/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferees.component.scss
@@ -31,7 +31,8 @@
     flex-direction: column;
     align-items: start;
 
-    button {
+    div, button {
+      margin-top: rem(4);
       width: 100%;
     }
   }
