--- a/portal-frontend/src/app/features/notifications/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -2,7 +2,7 @@
   <div class="type">
     <label>Select ownership type:</label>
     <div class="subtext">
-      The answer to the following question will change the rest of the notice of intent form. Do not change this answer
+      The answer to the following question will change the rest of the form. Do not change this answer
       once selected.
     </div>
     <mat-button-toggle-group
