--- a/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.html
@@ -5,7 +5,7 @@
     [showEdit]="showEdit"
   ></app-parcel>
 </section>
-<h3>2. Identify Transferees</h3>
+<h3>2. Identify Transferee(s)</h3>
 <div *ngIf="notificationSubmission" class="review-table">
   <div class="full-width transferee-table">
     <div class="subheading2">Type</div>
@@ -33,7 +33,7 @@
 </div>
 <section>
   <h3>3. Primary Contact</h3>
-  <div *ngIf="notificationSubmission" class="review-table">
+  <div *ngIf="notificationSubmission" class="review-table other-layout">
     <div class="subheading2 grid-1">First Name</div>
     <div class="grid-double">
       {{ notificationSubmission.contactFirstName }}
@@ -78,7 +78,7 @@
 </section>
 <section>
   <h3>4. Government</h3>
-  <div *ngIf="notificationSubmission" class="review-table">
+  <div *ngIf="notificationSubmission" class="review-table other-layout">
     <div class="subheading2 grid-1">Local or First Nation Government</div>
     <div class="grid-double">
       {{ localGovernment?.name }}
