--- a/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
+++ b/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
@@ -97,6 +97,10 @@
     word-wrap: break-word;
     hyphens: auto;
 
+    &.other-layout {
+      grid-template-columns: 1fr 1fr;
+    }
+
     .edit-button {
       display: flex;
       justify-content: center;
